# RxnFlow

./: .gitignore  README.md  job.sh  pyproject.toml  setup.py  slurm-106449.out  slurm-106564.out
data/: README.md
data/examples/: 6oim_protein.pdbqt
data/experiments/: README.md
data/scripts/: _b_smi_to_env.py  _utils.py  a_refine_smi.py  a_sdf_to_env.py  a_sdf_to_smi.py  b2_smi_to_env.py  b_create_env.py  b_smi_to_block.py  c_create_workflow.py  c_save_block_data.py  create_env.py  d_create_crossdocked_db.py  subsample.py  subsample_building_blocks.py
data/templates/: protocol.yaml  real.txt  synthon.yaml
examples/: opt_qed.py  sampling_qed.py  sampling_qed_advanced.py
experiments/scripts/: A1_opt_litpcba.py  A2_benchmark_zincfrag_fraggfn.py  A2_extract_topk.py  A_opt_litpcba.py  B1_benchmark_zincfrag.py  B1_benchmark_zincfrag_fraggfn.py  B2_test_crossdocked2020.py  C1_train_pocket_conditional.py  C2_test_crossdocked2020.py  test_crossdocked2020.py
experiments/sweep/: benchmark.yaml  benchmark_fraggfn.yaml
paper_exp/scripts/: _exp1_constant.py  ana4_toy.py  exp2_zero_shot.py  test_ana1_sampling_qed.py  test_ana2_sampling_zeroshot.py  test_exp2_zero_shot.py  test_exp2_zero_shot_ranking.py
script/: _utils.py  opt_qed.py  opt_seh.py  opt_unidock.py  opt_unidock_mogfn.py  opt_unidock_moo.py  pretrain_qed.py  sampling_unidock.py  sampling_zeroshot.py  train_pocket_conditional.py
scripts/: few_shot_unidock_moo.py  opt_unidock.py  opt_unidock_mogfn.py  opt_unidock_moo.py  pretrain_qed.py  sampling_unidock.py  sampling_zeroshot.py  train_pocket_conditional.py
scripts/examples/: opt_qed.py  sampling_qed.py
src/gflownet/: astb_online_trainer.py  astb_trainer.py  config.py  online_trainer.py  trainer.py
src/rxnflow/: config.py
(+161 files in other folders)
